# Bosing

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Bosing.sln  CHANGELOG.md  Cargo.toml  Directory.Build.props  LICENSE.txt  Qynit.PulseGen.sln  Qynit.Pulsewave.sln  README.md  WaveGenBenchmarks.EnvelopeCacheBench-report-github.md  WaveGenBenchmarks.WaveformUtilsBench-report-github.md  bosing.pyi  build.ps1  clippy.toml  deny.toml  exclusion.dic  hatch_build.py  knope.toml  pyproject.toml  renovate.json  ruff_defaults.toml  rust-toolchain.toml  stubtest-allowlist.txt
.github/workflows/: auto-dep.yml  build-python.yml  ci.yml  dependency-audit.yml  prepare-release.yml  release.yml
benches/: naive.py
bosing-py/: Cargo.toml
bosing-py/src/: elements.rs  extract.rs  lib.rs  macros.rs  plot.rs  repr.rs  shapes.rs  types.rs  wavegen.rs
bosing-py/src/elements/: absolute.rs  grid.rs  stack.rs
bosing-py/src/wavegen/: pyfn.rs
docs/: api.rst  conf.py  index.rst  instruction.rst  quickstart.rst  requirements.txt  schedule.rst
example/: flexible.py  flexible_length.py  hann.py  interp.py  overlap.py  schedule.py  schedule_stress.py  try.py
examples/: plot.py  schedule.py  schedule_stress.py
examples/WaveGenBenchmarks/: EnvelopeCacheBench.cs  Program.cs  WaveGenBenchmarks.csproj  WaveformUtilsBench.cs
examples/WaveGenDemo/: Program.cs  WaveGenDemo.csproj
python/: README.md  pyproject.toml  ruff.toml
python/benches/: naive.py
python/bosing/: __init__.py  __init__.pyi  _bosing.pyi  _native.py  _plot.py  _repr.py  _utils.py  models.py
python/docs/: api.rst  conf.py  index.rst  instruction.rst  quickstart.rst  schedule.rst
python/docs/_templates/autosummary/: module.rst
python/example/: schedule.py  schedule_stress.py
python/examples/: envelopes_instructions.py  schedule_stress.py
python/pulsegen_client/: __init__.py  dotnet.py  models.py
python/pulsegen_cs/: __init__.py  _native.py  _utils.py
python/src/bosing/: __init__.py  _bosing.pyi  _plot.py
python/test/: test.py
python/tests/: test_basic.py  test_plot.py
src/: executor.rs  lib.rs  plot.rs  pulse.rs  python.rs  quant.rs  sampler.rs  schedule.rs  shape.rs  time.rs  types.rs  util.rs
src/Bosing/: BiquadChain.cs  BiquadCoefficients.cs  BiquadFilter.cs  Bosing.csproj  BosingOptions.cs  ComplexReadOnlySpan.cs  ComplexSpan.cs  Envelope.cs  EnvelopeCacheKey.cs  EnvelopeInfo.cs  EnvelopeSample.cs  FirCoefficients.cs  HannPulseShape.cs  IPulseShape.cs  InterpolatedPulseShape.cs  IqPair.cs  MathUtils.cs  PhaseTrackingTransform.cs  PooledComplexArray.cs  PostProcessTransform.cs  PulseList.cs  SignalFilter.cs  TimeAxisUtils.cs  TrianglePulseShape.cs  ValueArray.cs  WaveformSampler.cs  WaveformUtils.cs
src/Bosing.Aot/: Api.cs  Bosing.Aot.csproj  ScheduleRunner.cs  UnsafeMemoryManager.cs
src/Qynit.PulseGen/: AbsoluteSchedule.cs  Alignment.cs  ArrangeOption.cs  BarrierElement.cs  BiquadChain.cs  BiquadCoefficients.cs  BiquadFilter.cs  Channel.cs  ComplexReadOnlySpan.cs  ComplexSpan.cs  Envelope.cs  EnvelopeCacheKey.cs  EnvelopeInfo.cs  EnvelopeSample.cs  FirCoefficients.cs  GridLength.cs  GridLengthUnit.cs  GridSchedule.cs  HannPulseShape.cs  IPulseShape.cs  Instruction.cs  InterpolatedPulseShape.cs  IqPair.cs  MathUtils.cs  PhaseTrackingTransform.cs  Play.cs  PlayElement.cs  PooledComplexArray.cs  PostProcessGraph.cs  PostProcessTransform.cs  PulseGenOptions.cs  PulseList.cs  Qynit.PulseGen.csproj  RepeatElement.cs  Schedule.cs  ScheduleElement.cs  SetFrequency.cs  SetFrequencyElement.cs  SetPhase.cs  SetPhaseElement.cs  (+17 more)
src/Qynit.PulseGen.Aot/: Api.cs  Qynit.PulseGen.Aot.csproj  ScheduleRunner.cs  UnsafeMemoryManager.cs
src/Qynit.PulseGen.Server/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  App.razor  App.razor.cs  App.razor.ts  ArcUnsafe.cs  ChannelInfo.cs  ComplexArrayFormatter.cs  DisposableExtensions.cs  Extensions.cs  HannShapeInfo.cs  Instruction.cs  InterpolatedShapeInfo.cs  IqWaveform.cs  JsLocation.cs  MainLayout.razor  Play.cs  Program.cs  PulseGenRequest.cs  PulseGenResponse.cs  PulseGenRunner.cs  PythonApi.cs  Qynit.PulseGen.Server.csproj  ResultsExtensions.cs  ScheduleElementDto.cs  ScheduleRunner.cs  Server.cs  SetFrequency.cs  SetPhase.cs  ShapeInfo.cs  ShiftFrequency.cs  ShiftPhase.cs  SwapPhase.cs  TriangleShapeInfo.cs  _Imports.razor  esbuild.mjs  package-lock.json  package.json  (+3 more)
src/Qynit.Pulsewave/: Channel.cs  Class1.cs  ComplexArrayReadOnlySpan.cs  ComplexArraySpan.cs  ComplexReadOnlySpan.cs  ComplexSpan.cs  Envelope.cs  EnvelopeCacheKey.cs  EnvelopeContinuousSample.cs  EnvelopeInfo.cs  EnvelopePlateauSample.cs  EnvelopeSample.cs  FilterNodeBase.cs  HannPulseShape.cs  IFilterNode.cs  IPulseShape.cs  IWaveformOperator.cs  InputNode.cs  Instruction.cs  IqPair.cs  MathUtils.cs  OutputNode.cs  PhaseTrackingTransform.cs  Play.cs  PooledComplexArray.cs  PostProcessGraph.cs  PostProcessTransform.cs  PulseList.cs  Qynit.Pulsewave.csproj  SetFrequency.cs  SetPhase.cs  ShiftFrequency.cs  ShiftPhase.cs  SimpleWaveformOperator.cs  SwapPhase.cs  TimeAxisUtils.cs  TrianglePulseShape.cs  Waveform.cs  WaveformGenerator.cs  WaveformInfo.cs  (+2 more)
src/pulse/: fir.rs  iir.rs
src/python/: elements.rs  extract.rs  plot.rs  repr.rs  shapes.rs  wavegen.rs
src/schedule/: absolute.rs  builder.rs  grid.rs  play.rs  repeat.rs  simple.rs  stack.rs
src/types/: id.rs  quantity.rs
tests/: test_basic.py  test_plot.py
tests/Bosing.Tests/: Bosing.Tests.csproj  ComplexReadOnlySpanTests.cs  EnvelopeInfoTests.cs  HannPulseShapeTests.cs  IntegrationTests.cs  IqPairTests.cs  MathUtilsTests.cs  PooledComplexArrayTests.cs  PulseListTests.cs  TimeAxisUtilsTests.cs  ToleranceComparer.cs  TrianglePulseShapeTests.cs  WaveformUtilsTests.cs
tests/Qynit.PulseGen.Tests/: AbsoluteScheduleTests.cs  ComplexReadOnlySpanTests.cs  EnvelopeInfoTests.cs  FakeScheduleElement.cs  GridScheduleTests.cs  HannPulseShapeTests.cs  IntegrationTests.cs  IqPairTests.cs  MathUtilsTests.cs  PooledComplexArrayTests.cs  PulseListTests.cs  Qynit.PulseGen.Tests.csproj  RepeatElementTests.cs  (+8 more)
(+156 files in other folders)
