[package]
name = "bosing"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = ["bosing-py"]

[workspace.package]
version = "2.7.0"
authors = ["Jiahao Yuan <kahojyun@icloud.com>"]
edition = "2024"
rust-version = "1.85"
description = "Waveform generator for pulse sequences in quantum computing"
repository = "https://github.com/kahojyun/Bosing"
license = "MIT"
keywords = ["awg", "pulse", "waveform"]
categories = ["science"]

[workspace.dependencies]
anyhow = "1.0.100"
bspline = "1.1.0"
cached = "0.56.0"
float-cmp = "0.10.0"
hashbrown = { version = "0.16.1", features = ["rayon"] }
itertools = "0.14.0"
# Testing
mockall = "0.14.0"
ndarray = { version = "0.17.1", features = ["rayon"] }
num = "0.4.3"
numpy = "0.27.1"
ordered-float = "5.1.0"
pulp = "0.22.2"
pyo3 = { version = "0.27.2", features = [
  "abi3-py310",
  "anyhow",
  "generate-import-lib",
  "hashbrown",
] }
rayon = "1.11.0"
test-case = "3.3.1"
thiserror = "2.0.17"

[workspace.lints.clippy]
allow_attributes = "warn"
needless_pass_by_value = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "warn"
unwrap_used = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"

[dependencies]
anyhow.workspace = true
bspline.workspace = true
cached.workspace = true
float-cmp.workspace = true
hashbrown.workspace = true
itertools.workspace = true
ndarray.workspace = true
num.workspace = true
ordered-float.workspace = true
pulp.workspace = true
rayon.workspace = true
thiserror.workspace = true

[dev-dependencies]
mockall.workspace = true
test-case.workspace = true

[lints]
workspace = true
