[package]
name = "bosing-py"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
bosing = { path = ".." }
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true

[lints]
workspace = true
