[package]
name = "bosing-py"
edition.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
bosing = { path = ".." }
pyo3.workspace = true
numpy.workspace = true
ndarray.workspace = true
itertools.workspace = true
hashbrown.workspace = true
rayon.workspace = true
anyhow.workspace = true

[lints]
workspace = true
