[package]
name = "bosing-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
bosing = { path = ".." }
hashbrown.workspace = true
itertools.workspace = true
ndarray.workspace = true
numpy.workspace = true
pyo3.workspace = true
rayon.workspace = true

[lints]
workspace = true
